# IDJ

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: main.cpp.9844915E7D0513F4.idx
src/: game.cpp  game.hpp  main.cpp
